Show copy buttons when hovering anywhere in the container Make copy buttons sticky when scrolling - box-shadow isn't scaled by DPI like border-width, which fixes misalignment issue when using negative margin to make borders to overlap. It also doesn't affect layout which means we don't need a negative margin in the first place.

--- a/assets/res/main.css
+++ b/assets/res/main.css
@@ -544,48 +544,41 @@ code, annotation {
 }
 
 .copy-block {
-	display: block;
-	position: absolute;
-	right: 0;
-	top: 0;
-	z-index: 1;
-
-	height: 34px;
-	width: 34px;
-	font-size: 24px;
-	justify-content: center;
-	text-align: center;
-
 	background-color: var(--code-highlight-background);
-	border-color: var(--outline);
-	border-left-style: solid;
-	border-bottom-style: solid;
-	border-width: 1px;
-	margin: 0;
+	box-shadow: 0px 0px 0px 1px var(--outline);
+	display: block;
+	font-size: 24px;
+	height: 34px;
+	justify-content: center;
+	margin-left: auto;
+	position: sticky;
+	text-align: center;
+	top: 0;
+	width: 34px;
+	z-index: 1;
 
 	opacity: 0%;
 	transition-duration: 100ms;
 	transition-timing-function: ease-out;
+}
 
-	&:hover {
-		opacity: 100%;
-	}
+.copy-block + pre {
+	margin-top: -34px;
+}
+
+.container:hover .copy-block {
+	opacity: 100%;
+}
 
 .copy-block:focus-visible {
 	opacity: 100%;
 	transition-property: opacity, outline-offset, outline-color !important;
 }
 
-	&:focus-visible {
+@supports not selector(:focus-visible) {
+	.copy-block:focus {
 		opacity: 100%;
 		transition-property: opacity, outline-offset, outline-color !important;
-	}
-
-	@supports not selector(:focus-visible) {
-		&:focus & {
-			opacity: 100%;
-			transition-property: opacity, outline-offset, outline-color !important;
-		}
 	}
 }
 
@@ -1203,16 +1196,6 @@ math[display="block"] mtr mtd:not([class]) + mtd:not([class]) {
 
 .container.math .scroll {
 	margin: 0;
-}
-
-.container.math .copy-block {
-	border-right-style: solid;
-	border-top-style: solid;
-}
-
-.no-mathml .container.math .copy-block {
-	border-right-style: none;
-	border-top-style: none;
 }
 
 .no-mathml .container:has(math),
